# fileJunker

./: .gitignore  CMakeLists.txt  README.md  fileJunker.cpp
libfj/include/: fjutils.hpp  help.hpp
libfj/src/: CMakeLists.txt  fjutils.cpp  help.cpp
